Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P3: Somewhat important
-
Resolution: Done
-
Affects Version/s: 4.8.7, 5.4.0
-
Fix Version/s: 5.5.0
-
Component/s: Build tools: uic
-
Labels:
-
Environment:windows, Linux
-
Commits:c3737573ced4dc2217f31aac627fa8070e7512c8 (qtbase/5.5, 23.4.2015)
Description
uic generates code that calls setDefault() on a button before it is associated with the parent dialog.
In the example attached, the setDefault() call comes too early which means the wrong button ends up being seen as default due to more than one having auto default set.